--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,11 @@
       "parserOptions": {
         "project": "./tsconfig.json"
       },
+      "settings": {
+        "import/extensions": [
+          ".js"
+        ]
+      },
       "rules": {
         "prettier/prettier": [
           "error",
