--- a/package.json
+++ b/package.json
@@ -26,10 +26,7 @@
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.52",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "i18next": "22.4.10",
-    "next-i18next": "^13.1.6",
-    "react-i18next": "^12.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
