--- a/package.json
+++ b/package.json
@@ -26,7 +26,15 @@
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.52",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@formatjs/intl-localematcher": "^0.2.32",
+    "@next/font": "13.1.2",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "accept-language-parser": "^1.5.0",
+    "negotiator": "^0.6.3",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
@@ -79,7 +87,9 @@
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^1.15.4",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/accept-language-parser": "^1.5.3",
+    "@types/negotiator": "^0.6.1"
   },
   "config": {
     "commitizen": {
