--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.52",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "i18next": "22.4.10",
+    "next-i18next": "^13.1.6",
+    "react-i18next": "^12.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
@@ -79,7 +82,9 @@
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^1.15.4",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/react-dom": "^18.0.11",
+    "picocolors": "^1.0.0"
   },
   "config": {
     "commitizen": {
