--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18.2.0",
     "i18next": "22.4.10",
     "next-i18next": "^13.1.6",
-    "react-i18next": "^12.2.0"
+    "react-i18next": "^12.2.0",
+    "next-language-detector": "1.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
